# logos-module-client

./: CMakeLists.txt  README.md  flake.nix
.github/workflows/: ci.yml
nix/: build.nix  default.nix  include.nix  lib.nix  tests.nix
src/: CMakeLists.txt  logos_core_client.cpp  logos_core_client.h  logos_json_utils.cpp  logos_json_utils.h  logos_module_client.cpp  logos_module_client.h  logos_sdk_c.cpp  logos_sdk_c.h  proxy_api.cpp  proxy_api.h
tests/: CMakeLists.txt  test_logos_core_client.cpp  test_logos_json_utils.cpp  test_logos_sdk_c.cpp  test_proxy_api.cpp
